fix mob menu overflow

--- a/src/sass/components/_mobile_menu.scss
+++ b/src/sass/components/_mobile_menu.scss
@@ -35,6 +35,7 @@
             height: 503px;
             overflow: visible;
             overflow-y: scroll;
+            overflow: hidden;
             z-index: 3;
 
             padding-top: 63px;
